INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

INCLUDE(VigraAddTest)

ADD_SUBDIRECTORY(adjacency_list_graph)
ADD_SUBDIRECTORY(blockwisealgorithms)
ADD_SUBDIRECTORY(classifier)
ADD_SUBDIRECTORY(colorspaces)
ADD_SUBDIRECTORY(convolution)
ADD_SUBDIRECTORY(coordinateiterator)
ADD_SUBDIRECTORY(correlation)
ADD_SUBDIRECTORY(delegates)
ADD_SUBDIRECTORY(error)
ADD_SUBDIRECTORY(features)
ADD_SUBDIRECTORY(filters)
ADD_SUBDIRECTORY(fourier)
ADD_SUBDIRECTORY(functorexpression)
ADD_SUBDIRECTORY(graph_algorithm)
ADD_SUBDIRECTORY(gridgraph)
ADD_SUBDIRECTORY(hdf5impex)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(imgproc)
ADD_SUBDIRECTORY(impex)
ADD_SUBDIRECTORY(integral_image)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(merge_graph_adaptor)
ADD_SUBDIRECTORY(morphology)
ADD_SUBDIRECTORY(multiarray)
ADD_SUBDIRECTORY(multiconvolution)
ADD_SUBDIRECTORY(multidistance)
ADD_SUBDIRECTORY(multimorphology)
ADD_SUBDIRECTORY(objectfeatures)
ADD_SUBDIRECTORY(optimization)
ADD_SUBDIRECTORY(pixeltypes)
ADD_SUBDIRECTORY(polygon)
ADD_SUBDIRECTORY(sampler)
ADD_SUBDIRECTORY(seededRegionGrowing3d)
ADD_SUBDIRECTORY(sifImport)
ADD_SUBDIRECTORY(simpleanalysis)
ADD_SUBDIRECTORY(slic2d)
ADD_SUBDIRECTORY(tensorimaging)
ADD_SUBDIRECTORY(threadpool)
ADD_SUBDIRECTORY(unsupervised)
ADD_SUBDIRECTORY(utilities)
ADD_SUBDIRECTORY(volumelabeling)
ADD_SUBDIRECTORY(voxelneighborhood)
ADD_SUBDIRECTORY(watersheds3d)
