INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${PYTHON_INCLUDE_PATH} ${PYTHON_NUMPY_INCLUDE_DIR})

IF (CMAKE_GENERATOR MATCHES "Visual Studio")
  ADD_DEFINITIONS(-DVIGRA_DLL)
ENDIF (CMAKE_GENERATOR MATCHES "Visual Studio")

IF(HDF5_FOUND)
    ADD_DEFINITIONS(-DHasHDF5 -D_HDF5USEDLL_ -DHDF5CPP_USEDLL)
    INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
ENDIF(HDF5_FOUND)

ADD_LIBRARY(vigranumpytest SHARED
    vigranumpytest.cxx)

IF(PYTHON_PLATFORM MATCHES "^win32$")
    SET_TARGET_PROPERTIES(vigranumpytest PROPERTIES PREFIX "" SUFFIX  ".pyd")
ELSE()
    SET_TARGET_PROPERTIES(vigranumpytest PROPERTIES PREFIX "")
ENDIF()

TARGET_LINK_LIBRARIES(vigranumpytest ${Boost_PYTHON_LIBRARIES} ${PYTHON_LIBRARY} vigranumpycmodule)
ADD_DEPENDENCIES(vigranumpy vigranumpytest)
